--- a/Agong.html
+++ b/Agong.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -42,34 +43,28 @@
         </div>
         <!-- snow -->
 
-        <h1 class="head2"><a href="Agong.html">AGong</a></h1>
-        <div class="middle">
-            <aside class="list">
-                <ul>
-                    <li><a href="web.html">Web</a></li>
-                    <li><a href="Game.html">Game</a></li>
-                    <li class="here"><a href="App.html">App</a></li>
-                    <li><a href="Etc.html">Etc</a></li>
-                </ul>
-            </aside>
-            <main>
-                <div>Project</div>
-                <!-- 콘텐츠 넣을 공간 -->
-                <ul>
-                    <a><li></li></a>
-                    <a><li></li></a>
-                    <a><li></li></a>
-                </ul>
-                <ul>
-                    <a href=""><li></li></a>
-                    <a href=""><li></li></a>
-                    <a href=""><li></li></a>
-                </ul>
-                <!-- 콘텐츠 넣을 공간 -->
-            </main>
-        </div>
-    </body>
-    <footer id="information2">
+        <h1 class="head"><a href="Agong.html">AGong</a></h1>
+        <main>
+            <section>
+                <article  class="introduce">
+                    <!-- 안녕하세요! 저의 사이트를 방문해주셔서 감사합니다.<br>   
+                    저가 만든 작품들을 재밌게 구경해주세요!<br>
+                    궁금한 점은 하단에 인스타id로 dm보내주세요!-->
+                </article>
+            </section>
+            <section>
+                <article class="category">
+                    <ul>
+                        <li id="content1"><a href="web.html">Web</a></li>
+                        <li id="content2"><a href="Game.html">Game</a></li>
+                        <li id="content3"><a href="App.html">App</a></li>
+                        <li id="content4"><a href="Etc.html">Etc.</a></li>
+                    </ul>
+                </article>
+            </section>
+        </main>
+        <footer id="information">
             Instagram id: art_gong<br>
-    </footer>
+        </footer>
+    </body>
 </html>
