--- a/Web.html
+++ b/Web.html
@@ -42,7 +42,7 @@
         </div>
         <!-- snow -->
 
-        <h1 class="head2"><a href="main.html">AGong</a></h1>
+        <h1 class="head2"><a href="Agong.html">AGong</a></h1>
         <div class="middle">
             <aside class="list">
                 <ul>
@@ -56,7 +56,7 @@
                 <div>Project</div>
                 <!-- 콘텐츠 넣을 공간 -->
                 <ul>
-                    <a id="Agong" href="main.html"></a>
+                    <a id="Agong" href="Agong.html"></a>
                     <a><li></li></a>
                     <a><li></li></a>
                 </ul>
