--- a/Etc.html
+++ b/Etc.html
@@ -42,7 +42,7 @@
         </div>
         <!-- snow -->
 
-        <h1 class="head2"><a href="main.html">AGong</a></h1>
+        <h1 class="head2"><a href="Agong.html">AGong</a></h1>
         <div class="middle">
             <aside class="list">
                 <ul>
