--- a/Agong.html
+++ b/Agong.html
@@ -55,7 +55,7 @@
             <section>
                 <article class="category">
                     <ul>
-                        <li id="content1"><a href="web.html">Web</a></li>
+                        <li id="content1"><a href="Web.html">Web</a></li>
                         <li id="content2"><a href="Game.html">Game</a></li>
                         <li id="content3"><a href="App.html">App</a></li>
                         <li id="content4"><a href="Etc.html">Etc.</a></li>
