--- a/App.html
+++ b/App.html
@@ -46,7 +46,7 @@
         <div class="middle">
             <aside class="list">
                 <ul>
-                    <li><a href="web.html">Web</a></li>
+                    <li><a href="Web.html">Web</a></li>
                     <li><a href="Game.html">Game</a></li>
                     <li class="here"><a href="App.html">App</a></li>
                     <li><a href="Etc.html">Etc</a></li>
